--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
   .secondary{background:#ffffff;color:#444;box-shadow:0 4px 14px rgba(0,0,0,0.1);}
   #msg{opacity:0;transform:translateY(10px);transition:.5s;margin-top:18px;}
   #msg.show{opacity:1;transform:translateY(0);}
+  #msg h2{margin:6px 0 4px;font-size:26px}
+  #msg p{margin:0;color:#334155}
+  /* full-screen confetti canvas */
   #confetti-canvas{position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:999;}
 </style>
 </head>
@@ -75,7 +78,7 @@
 
   <div id="msg">
     <h2>🎉 HAPPY BIRTHDAY, ASH! 🎉</h2>
-    <p>Wishing you joy, love and all your favourite moments today. 💖✨</p>
+    <p>Wishing you a day filled with love, laughter and all your favourite things. ♥️ 💖✨</p>
     <button id="playBtn" class="secondary" style="display:none;margin-top:18px;">🎵 Tap to play music</button>
   </div>
 </div>
@@ -83,7 +86,7 @@
 <script>
 /* CONFIG */
 const SECRET = "Ash25";
-const AUDIO_URL = "https://raw.githubusercontent.com/Mathumitha122/Music/main/happy-birthday-334876.mp3";
+const AUDIO_URL = "https://voca.ro/17v6fmBtyoPp";
 
 /* Confetti canvas */
 const canvas = document.getElementById("confetti-canvas");
@@ -129,16 +132,17 @@ unlockBtn.onclick = () => {
   navigator.vibrate?.(40);
 
   // create audio object inside user gesture
-  music = new Audio(AUDIO_URL);
-  music.loop = false;
+  if(!music){
+    music = new Audio(AUDIO_URL);
+    music.loop = false;
+  }
 
-  // try autoplay
-  music.play()
-  .then(()=>{
+  // attempt to play immediately (this click counts as user gesture)
+  music.play().then(()=>{
     playBtn.style.display = "none";
-  })
-  .catch(()=>{
-    playBtn.style.display = "inline-block"; // fallback for iPhone
+  }).catch(()=>{
+    // fallback
+    playBtn.style.display = "inline-block";
   });
 
   unlockBtn.disabled = true;
